    * Fixed trailing / issue with various weblog urls
    * Allow site-wide configurable control over max entries in both pages and feeds
    * Allow for bulk delete of comments matching a given pattern
    * Allow for hibernate configuration via roller.properties config
    * [ROL-1281] - unnecessary session creation on weblog urls

Bug Fixes
    * [ROL-829] - comment munging escaped HTML content
    * [ROL-1280] - entry management paging
    * fix to prevent entries published to future from being viewable via permalinks
    * fixed bug allowing user to create multiple pages with the same name
    * fixed bug allowing user to create a 'Weblog' template without setting defaultPageId
    * fix for in-use category deletion and duplicate named category issues
    * fix for anchor creation when non-alpha characters are involved

-------------------------------------------------------------------------------

Roller 3.0: major release with new URL structure and new template system

Please refer to the What's New page for an overview of the changes:
http://rollerweblogger.org/wiki/Wiki.jsp?page=Roller_3.0_WhatsNew

Enhancements tracked in JIRA

    * [ROL-790] - Better URLs
    * [ROL-856] - Front Page Improvement: 'Show More' or 'Show Post Since: xxxxx' feature on main page
    * [ROL-962] - Performance: Optionally eliminate language specific cache keys
    * [ROL-973] - All forms shown within tabbed UI
    * [ROL-975] - Velocity cleanup
    * [ROL-1006] - Group blog administration improvements
    * [ROL-1032] - Confirmation message when moderated comment is submitted
    * [ROL-1129] - Do not render commentors email addresses
    * [ROL-1131] - Improve comments form to be more CSS-Friendy.
    * [ROL-1137] - Throttle support for comments
    * [ROL-1138] - Technorati ping config auto enabled for new blogs
    * [ROL-1139] - Packaging reorg
    * [ROL-1140] - Blog last change date property
    * [ROL-1141] - Apache license compliance